src/objects/Tender_Document_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Payment_System_Options_2__c</fullName>
        <label>Payment System Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Coins</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Multiple Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_System_Options_3__c</fullName>
        <label>Payment System Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Coins</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Multiple Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_term__c</fullName>
        <label>Payment term (in days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Problem_Solution_Time__c</fullName>
        <label>Problem Solution Time (in hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Problem_Solving_Time__c</fullName>
        <label>Problem Solving Time (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Intensity_Options_1__c</fullName>
        <label>Product Intensity Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Intensity_Options_2__c</fullName>
        <label>Product Intensity Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Intensity_Options_3__c</fullName>
        <label>Product Intensity Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality__c</fullName>
        <label>Quality (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Real_Time_Data_Available__c</fullName>
        <label>Real Time Data Available (connectivity)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Non_Standard_Operating_Hours__c</fullName>
        <label>Requested Non-Standard Operating Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time_Service_Desk__c</fullName>
        <label>Response Time Service Desk (in hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time_Tech_Service_Team__c</fullName>
        <inlineHelpText>Response Time Technical Service Team (in HOURS)</inlineHelpText>
        <label>Response Time Tech Service Team (hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSC_for_JDE_Personnel__c</fullName>
        <label>SSC for JDE Personnel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Separate_Taps_for_Coffee_Tea_1__c</fullName>
        <label>Separate Taps for Coffee &amp; Tea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Separate_Taps_for_Coffee_Tea_2__c</fullName>
        <label>Separate Taps for Coffee &amp; Tea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Separate_Taps_for_Coffee_Tea_3__c</fullName>
        <label>Separate Taps for Coffee &amp; Tea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starting_Date_Tasting_Test__c</fullName>
        <label>Starting Date Tasting Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sugar__c</fullName>
        <label>Sugar</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fairtrade</fullName>
                </value>
                <value>
                    <fullName>UTZ</fullName>
                </value>
                <value>
                    <fullName>EKO</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sustainability_Environmental__c</fullName>
        <label>Sustainability (Environmental) (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sustainability_Social__c</fullName>
        <label>Sustainability (Social) (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sustainability__c</fullName>
        <label>Sustainability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taste_Test_Method__c</fullName>
        <label>Taste Test Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blind</fullName>
                </value>
                <value>
                    <fullName>Branded</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Taste_User_Experience__c</fullName>
        <label>Taste / User Experience (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tea__c</fullName>
        <label>Tea</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fairtrade</fullName>
                </value>
                <value>
                    <fullName>UTZ</fullName>
                </value>
                <value>
                    <fullName>EKO</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender_Method__c</fullName>
        <label>Tender Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public Tender</fullName>
                </value>
                <value>
                    <fullName>RfP/RfQ (Multiple competitors)</fullName>
                </value>
                <value>
                    <fullName>Best Value Procurement</fullName>
                </value>
                <value>
                    <fullName>Basic Proposal (No competitors)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tender_Score_Formula__c</fullName>
        <label>Tender Score Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vending_Machine_Model_1__c</fullName>
        <label>Vending Machine Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Table Top Model</fullName>
                </value>
                <value>
                    <fullName>Full Size Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vending_Machine_Model_2__c</fullName>
        <label>Vending Machine Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Table Top Model</fullName>
                </value>
                <value>
                    <fullName>Full Size Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vending_Machine_Model_3__c</fullName>
        <label>Vending Machine Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Table Top Model</fullName>
                </value>
                <value>
                    <fullName>Full Size Model</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waste_Disposal_by_JDE__c</fullName>
        <label>Waste Disposal by JDE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Dose_per_cup_in_cc__c</fullName>
        <label>Water Dose per cup (in cc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width_1__c</fullName>
        <label>Width (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width_2__c</fullName>
        <label>Width (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Width_3__c</fullName>
        <label>Width (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Tender Document Summary</label>
    <nameField>
        <displayFormat>TDS-{MMDDYYYY}{00000}</displayFormat>
        <label>Tender Document Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tender Document Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>